--- a/index.html
+++ b/index.html
@@ -15,10 +15,67 @@
 
     <title>Boolzapp</title>
 </head>
+
 <body>
-    <div id="app">
-        
+    <div id="app" class="p-4">
+        <div class="container">
+            <div class="wrapper d-flex">
+                <div class="left">
+                    <div class="top-contact d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center">
+                            <img src="./img/avatar_1.jpg" alt="avatar1">
+                            <div>Sofia</div>
+                        </div>
+                        <div class="d-flex">
+                            <i class="fa-solid fa-circle-notch"></i>
+                            <i class="fa-solid fa-message"></i>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="notifications">
+                        <div class="d-flex align-content-center">
+                            <div class="bg-white rounded-5 p-2">
+                                <i class="fa-solid fa-bell-slash"></i>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="searchbar px-4 py-2">
+                        <input type="text" class="form-control" id="exampleFormControlInput1"
+                            placeholder="Cerca o inizia una nuova chat">
+                    </div>
+                    <div class="conversation debug">
+                        <div class="user d-flex justify-content-between">
+                            <div class="d-flex">                                
+                                    <img src="./img/avatar_2.jpg" alt="">                                
+                                <div>
+                                    <div><h6>Michele</h6></div>
+                                    <div>Ultimo messaggio inviato</div>                                    
+                                </div>
+                            </div>
+                            <div>
+                                orario
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="top-contact d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center">
+                            <img src="./img/avatar_1.jpg" alt="avatar1">
+                            <div>Sofia</div>
+                        </div>
+                        <div class="d-flex">
+                            <i class="fa-solid fa-circle-notch"></i>
+                            <i class="fa-solid fa-message"></i>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
+
 </html>
