almost created the right layout

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="right">
+                <div class="right d-flex flex-column justify-content-between ">
                     <div class="top-contact d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                             <img src="./img/avatar_1.jpg" alt="avatar1">
@@ -70,6 +70,12 @@
                             <i class="fa-solid fa-message"></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
                         </div>
+                    </div>
+                    <div class="chat">
+                        aaa
+                    </div>
+                    <div class="toolbar">
+                        a
                     </div>
                 </div>
             </div>
