trying to fit the chat messages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <input type="text" class="form-control" id="exampleFormControlInput1"
                             placeholder="Cerca o inizia una nuova chat">
                     </div>
-                    <div class="conversation debug">
+                    <div class="conversations debug">
                         <div class="user d-flex justify-content-between py-2 border-top border-bottom" v-for="(item, id) in contacts">
                             <div class="d-flex">                                
                                     <img :src="item.avatar" :alt="item.name">                                
@@ -72,7 +72,17 @@
                         </div>
                     </div>
                     <div class="chat">
-                        aaa
+                        <div class="p-3 d-flex justify-content-end">
+                            <div class="sent d-flex justify-content-between">
+                                <div>messaggio</div>
+                                <div class="d-flex flex-column justify-content-end">orario</div>
+                            </div>
+                        </div>
+                        <div class="p-3 d-flex justify-content-start">
+                            <div class="received">
+                                received
+                            </div>
+                        </div>
                     </div>
                     <div class="toolbar">
                         a
