--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="wrapper d-flex">
                 <div class="left">
-                    <div class="top-contact d-flex align-items-center justify-content-between">
+                    <div class="top-contact d-flex align-items-center justify-content-between p-2">
                         <div class="d-flex align-items-center">
                             <img src="./img/avatar_1.jpg" alt="avatar1">
                             <div>Sofia</div>
@@ -60,14 +60,14 @@
                     </div>
                 </div>
                 <div class="right d-flex flex-column justify-content-between ">
-                    <div class="top-contact d-flex align-items-center justify-content-between">
+                    <div class="top-contact d-flex align-items-center justify-content-between p-2">
                         <div class="d-flex align-items-center">
                             <img src="./img/avatar_1.jpg" alt="avatar1">
                             <div>Sofia</div>
                         </div>
                         <div class="d-flex">
-                            <i class="fa-solid fa-circle-notch"></i>
-                            <i class="fa-solid fa-message"></i>
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <i class="fa-solid fa-paperclip"></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
                         </div>
                     </div>
