fixed the notification bar

--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
                             <i class="fa-solid fa-ellipsis-vertical"></i>
                         </div>
                     </div>
-                    <div class="notifications">
-                        <div class="d-flex align-content-center">
+                    <div class="notifications d-flex align-content-center">
+                        <div class="align-self-center p-4">
                             <div class="bg-white rounded-5 p-2">
                                 <i class="fa-solid fa-bell-slash"></i>
                             </div>
+                        </div>
+                        <div class="align-self-center lh-1">
+                            <div><h6>Ricevi notifiche di nuovi messaggi</h6></div>
+                            <div class="text-decoration-underline">Attiva notifiche desktop</div>
                         </div>
 
                     </div>
@@ -60,7 +64,7 @@
                     </div>
                 </div>
                 <div class="right d-flex flex-column justify-content-between ">
-                    <div class="top-contact d-flex align-items-center justify-content-between p-2">
+                    <div class="top-contact d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                             <img src="./img/avatar_1.jpg" alt="avatar1">
                             <div>Sofia</div>
