--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="top-contact d-flex align-items-center justify-content-between p-2">
                         <div class="d-flex align-items-center">
                             <img src="./img/avatar_1.jpg" alt="avatar1">
-                            <div>Sofia</div>
+                            <div>Personal account</div>
                         </div>
                         <div class="d-flex">
                             <i class="fa-solid fa-circle-notch"></i>
@@ -39,7 +39,9 @@
                             </div>
                         </div>
                         <div class="align-self-center lh-1">
-                            <div><h6>Ricevi notifiche di nuovi messaggi</h6></div>
+                            <div>
+                                <h6>Ricevi notifiche di nuovi messaggi</h6>
+                            </div>
                             <div class="text-decoration-underline">Attiva notifiche desktop</div>
                         </div>
 
@@ -49,12 +51,14 @@
                             placeholder="Cerca o inizia una nuova chat">
                     </div>
                     <div class="conversations">
-                        <div class="user d-flex justify-content-between py-2 border-top border-bottom" v-for="(item, id) in contacts">
-                            <div class="d-flex">                                
-                                    <img :src="item.avatar" :alt="item.name">                                
+                        <div class="user d-flex justify-content-between py-2 border-top border-bottom" :class="{'activechat': activeContactId === item.id}" v-for="(item, id) in contacts">
+                            <div class="d-flex">
+                                <img :src="item.avatar" :alt="item.name">
                                 <div>
-                                    <div><h6>{{item.name}}</h6></div>
-                                    <div>Ultimo messaggio inviato</div>                                    
+                                    <div>
+                                        <h6>{{item.name}}</h6>
+                                    </div>
+                                    <div>Ultimo messaggio inviato</div>
                                 </div>
                             </div>
                             <div>
@@ -66,8 +70,13 @@
                 <div class="right d-flex flex-column justify-content-between ">
                     <div class="top-contact d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
-                            <img src="./img/avatar_1.jpg" alt="avatar1">
-                            <div>Sofia</div>
+                            <div class="img-fluid p-2">
+                                <img src="./img/avatar_1.jpg" alt="avatar1">
+                            </div>
+                            <div>
+                                <div>Sofia</div>
+                                <div class="lastaccess">Ultimo accesso oggi alle 12:00</div>
+                            </div>
                         </div>
                         <div class="d-flex">
                             <i class="fa-solid fa-magnifying-glass"></i>
