--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -48,10 +49,11 @@
                     </div>
                     <div class="searchbar px-4 py-2">
                         <input type="text" class="form-control" id="exampleFormControlInput1"
-                            placeholder="Cerca o inizia una nuova chat">
+                            placeholder="Cerca o inizia una nuova chat" v-model="searchText">
                     </div>
                     <div class="conversations">
-                        <div class="user d-flex justify-content-between py-2 border-top border-bottom" :class="{'activechat': activeContactId === item.id}" v-for="(item, id) in contacts" @click="setActiveChat(id)">
+                        <div v-if="filteredContacts.length < 1" class="text-center bg-danger-subtle">Nessuna conversazione trovata</div>
+                        <div class="user d-flex justify-content-between py-2 border-top border-bottom" :class="{'activechat': activeContactId === item.id}" v-for="(item, id) in filteredContacts" @click="setActiveChat(item.id)">
                             <div class="d-flex">
                                 <img :src="item.avatar" :alt="item.name">
                                 <div>
@@ -71,10 +73,10 @@
                     <div class="top-contact d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                             <div class="img-fluid p-2">
-                                <img src="./img/avatar_1.jpg" alt="avatar1">
+                                <img :src="activeContact.avatar" :alt="activeContact.name">
                             </div>
                             <div>
-                                <div>Sofia</div>
+                                <div>{{activeContact.name}}</div>
                                 <div class="lastaccess">Ultimo accesso oggi alle 12:00</div>
                             </div>
                         </div>
@@ -85,16 +87,11 @@
                         </div>
                     </div>
                     <div class="chat">
-                        <div class="p-3 d-flex justify-content-end">
-                            <div class="sent d-flex justify-content-between flex-wrap">
-                                <div>messaggio</div>
-                                <div class="chatclock d-flex flex-column justify-content-end">16.15</div>
-                            </div>
-                        </div>
-                        <div class="p-3 d-flex justify-content-start">
-                            <div class="received d-flex justify-content-between flex-wrap">
-                                <div>received</div>
-                                <div class="chatclock d-flex flex-column justify-content-end">16.15</div>
+                        <div class="p-3 d-flex" v-for="(message, id) in activeContact.messages">
+                            <div class="d-flex justify-content-between flex-wrap debug " :class="message.status">
+                                <!--  -->
+                                <div>{{message.message}}</div>
+                                <div class="chatclock d-flex flex-column justify-content-end">{{message.date}}</div>
                             </div>
                         </div>
                     </div>
@@ -103,7 +100,7 @@
                             <i class="fa-regular fa-face-smile"></i>
                         </div>
                         <div class="flex-fill">
-                            <input type="text" class="form-control" id="messagebox" placeholder="Scrivi un messaggio">
+                            <input type="text" class="form-control" id="messagebox" placeholder="Scrivi un messaggio" v-model="messageText" @keyup.enter="sendMessage()">
                         </div>
                         <div class="p-4">
                             <i class="fa-solid fa-microphone"></i>
