--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="top-contact d-flex align-items-center justify-content-between p-2">
                         <div class="d-flex align-items-center">
                             <img src="./img/avatar_1.jpg" alt="avatar1">
-                            <div>Personal account</div>
+                            <div>Nazario</div>
                         </div>
                         <div class="d-flex">
                             <i class="fa-solid fa-circle-notch"></i>
@@ -64,7 +64,7 @@
                                 </div>
                             </div>
                             <div>
-                                orario
+                                aaa
                             </div>
                         </div>
                     </div>
@@ -89,7 +89,6 @@
                     <div class="chat">
                         <div class="p-3 d-flex" v-for="(message, id) in activeContact.messages">
                             <div class="d-flex justify-content-between flex-wrap" :class="message.status">
-                                <!--  -->
                                 <div>{{message.message}}</div>
                                 <div class="chatclock d-flex flex-column justify-content-end">{{message.date}}</div>
                             </div>
