--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="left">
                     <div class="top-contact d-flex align-items-center justify-content-between p-2">
                         <div class="d-flex align-items-center">
-                            <img src="./img/avatar_1.jpg" alt="avatar1">
+                            <img src="./img/logo.png" alt="avatar1">
                             <div>Nazario</div>
                         </div>
                         <div class="d-flex">
@@ -102,7 +102,7 @@
                             <input type="text" class="form-control" id="messagebox" placeholder="Scrivi un messaggio" v-model="messageText" @keyup.enter="sendMessage()" @keyup="sendIcon">
                         </div>
                         <div class="p-4">                            
-                            <i class="fa-solid fa-location-arrow" v-if="send"></i>
+                            <i class="fa-solid fa-location-arrow" v-if="send" @click="sendMessage()"></i>
                             <i class="fa-solid fa-microphone" v-else></i>
                         </div>
                     </div>
