--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <div class="left">
                     <div class="top-contact d-flex align-items-center justify-content-between p-2">
                         <div class="d-flex align-items-center">
+                            <div class="px-2">
                             <img src="./img/logo.png" alt="avatar1">
+                            </div>
                             <div>Nazario</div>
                         </div>
                         <div class="d-flex">
@@ -53,17 +55,21 @@
                     </div>
                     <div class="conversations">
                         <div v-if="filteredContacts.length < 1" class="text-center bg-danger-subtle">Nessuna conversazione trovata</div>
-                        <div class="user d-flex justify-content-between py-2 border-top border-bottom" :class="{'activechat': activeContactId === item.id}" v-for="(item, id) in filteredContacts" @click="setActiveChat(item.id)">
-                            <div class="d-flex">
+                        <div class="user d-flex justify-content-between p-2 border-top border-bottom" :class="{'activechat': activeContactId === item.id}" v-for="(item, id) in filteredContacts" @click="setActiveChat(item.id)">
+                            <div class="d-flex justify-content-between">
+                                <div class="px-2">
                                 <img :src="item.avatar" :alt="item.name">
+                                </div>
                                 <div>
                                     <div>
                                         <h6>{{item.name}}</h6>
                                     </div>
-                                    <div>{{item.messages[item.messages.length - 1].message}}</div>
+                                    <div class="userlastmessage">
+                                        {{item.messages[item.messages.length - 1].message}}
+                                    </div>
                                 </div>
                             </div>
-                            <div>
+                            <div class="userdate">
                                 {{item.messages[item.messages.length - 1].date}}
                             </div>
                         </div>
