--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <input type="text" class="form-control" id="messagebox" placeholder="Scrivi un messaggio" v-model="messageText" @keyup.enter="sendMessage()" @keyup="sendIcon">
                         </div>
                         <div class="p-4">                            
-                            <i class="fa-solid fa-location-arrow" v-if="send" @click="sendMessage()"></i>
+                            <i class="fa-solid fa-location-arrow" v-if="messageText " @click="sendMessage()"></i>
                             <i class="fa-solid fa-microphone" v-else></i>
                         </div>
                     </div>
