created the dropdown button and created the last access function

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </div>
                             <div>
                                 <div>{{activeContact.name}}</div>
-                                <div class="lastaccess">Ultimo accesso oggi alle 12:00</div>
+                                <div class="lastaccess">Ultimo accesso {{lastAccess}}</div>
                             </div>
                         </div>
                         <div class="d-flex">
@@ -97,10 +97,23 @@
                         </div>
                     </div>
                     <div class="chat">
-                        <div class="p-3 d-flex" v-for="(message, id) in activeContact.messages">
+                        <div class="p-3 d-flex" v-for="(message, index) in activeContact.messages">
                             <div class="d-flex justify-content-between flex-wrap" :class="message.status">
                                 <div>{{message.message}}</div>
-                                <div class="chatclock d-flex flex-column justify-content-end">{{message.date}}</div>
+                                <div class="chatclock d-flex flex-column">
+                                    <div class="d-flex justify-content-end">
+                                        <!-- <i class="fa-solid fa-angle-down " type="button"></i> -->
+                                        <div class="dropdown">
+                                            <button class="btn dropdown-toggle" type="button" @click="toggleDropdown(index)">
+                                            </button>
+                                            <ul class="dropdown-menu" :class="{'show': activeMessageIndex === index}">
+                                              <li><a class="dropdown-item" href="#">Action</a></li>
+                                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                                            </ul>
+                                          </div>
+                                    </div>
+                                    <div>{{message.date}}</div>
+                                </div>
                             </div>
                         </div>
                     </div>
